styles.css
body {
    background-color: #E5E7EB;
    margin: 0;
    font-family: Roboto, system-ui, sans-serif;
    min-height: 100vh;
}

.header {
    background-color: #1F2937;
    color: #E5E7EB;
    padding: 10px;
    text-align: center;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    height: 75px;
    margin-right: 20px;
}

.nav ul {
    color: #E5E7EB;
    list-style: none;
    margin: 0 20px;
    text-decoration: none;
    display: flex;
    gap: 10px;
}

.nav ul li a {
    color: #E5E7EB;
    text-decoration: none;
    padding: 10px 15px;
    font-size: 18px;
}

.nav ul li a:hover {
    background-color: #E5E7EB;
    color: #1F2937;
    border-radius: 5px;
}

.hero {
    background-color: #1F2937;
    color: white;
    padding: 60px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.hero-content {
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hero-content h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    width: 400px;
    margin: 0 auto;
    text-align: center;
}

.hero-content p {
    font-size: 18px;
    color: #E5E7EB;
    width: 400px;
    margin: 20px auto 0;
    text-align: center;
}

.hero-content h1 p {
    flex:1;
    justify-content: flex-start;
}

.hero-button {
    display: inline-block;
    padding: 10px 20px;
    margin: 20px;
    background-color: #007bff;
    color: white;
    text-align: center;
    text-decoration: none;
    border-radius: 5px;
    border: none;
    cursor: pointer;
    font-family: sans-serif;
}

.hero-button:hover {
    background-color: #0056b3;
}

.hero-image {
    width: 400px;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
}

.cards {
    display: flex;
    padding: 60px;
    gap: 15px;
    background-color: #E5E7EB;
}

.card {
    background-color: #ffffff;
    padding: 10px;
    width: 30%;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    align-items: center;
    justify-content: space-between;
}

.testimonial {
    background-color: #c7cacc;
    font-size: 24px;
    font-style: italic;
    color: #1F2937;
    font-weight: 300;
    padding: 20px;
    text-align: center;
}

.call-to-action {
    background-color: #007BFF;
    padding: 10px;
    display: flex;
    margin: 40px auto;
    border-radius: 5px;
    border: none;
    width: 800px;
    height: 150px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    flex: 1;
}

.cta-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #F9FAF8;
    padding: 18px;
    flex: 1;
}

.cta-content h2 {
    font-size: 22px;
    margin: 0;
}

.cta-content p {
    font-size: 16px;
    margin: 0;
}

.cta-button {
    display: inline-block;
    padding: 10px 20px;
    margin: 20px;
    background-color: #007bff;
    color: #F9FAF8;
    text-align: center;
    text-decoration: none;
    border-radius: 5px;
    border: 2px solid #E5E7EB;
    cursor: pointer;
    font-family: sans-serif;
}

.hero-button:hover {
    background-color: #012f61;
}

footer {
    background-color: #1F2937;
    color: #E5E7EB;
    padding: 20px;
    text-align: center;
}

